# affinity

./: .gitignore  CMakeLists.txt  README.md
include/: affinity.hpp  dispatcher.hpp  pool.hpp  task.hpp
tests/: basic.cpp
